apps/hello-world/overlays/dev/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-frontend
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: hello-world-frontend
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world-frontend
        task: hello-world-frontend
    containers:
    - image: kostiscodefresh/simple-web-app
      imagePullPolicy: IfNotPresent
      name: webserver-simple
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
