apps/hello-world/overlays/dev/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true, ServerSideApply=false
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/name: hello-world
  name: hello-world

spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8080
  selector:
    app.kubernetes.io/name: hello-world
    task: hello-world
